open source line update

--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
     <script src="index.js">
 
     </script>
-    <footer> <a href="http://github.com/amandareyd/weather-app-project.git" target="_blank">Open-sourced code</a>", by Amanda Drause"</footer>
+    <footer> <a href="http://github.com/amandareyd/weather-app-project.git" target="_blank">Open-sourced code</a>, by Amanda Drause</footer>
 </body>
 </html>
