--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         Humidity: <span id="humidity"></span>%
                     </li>
                     <li>
-                        Wind <span id="wind"> </span> km/h 
+                        Wind <span id="wind"> </span> mph
                     </li>
                 </ul>
             </div>
