added id to git-link

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
      </button>
         
     </div>
-      <small> <a href="http://github.com/amandareyd/weather-app-project.git" target="_blank">Open-sourced code</a>, by Amanda Drause</small>
+      <small id="#git-link"> <a href="http://github.com/amandareyd/weather-app-project.git" target="_blank">Open-sourced code</a>, by Amanda Drause</small>
    
   </div>
     <script src="index.js">
