--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
      </button>
         
     </div>
-      <small id="#git-link"> <a href="http://github.com/amandareyd/weather-app-project.git" target="_blank">Open-sourced code</a>, by Amanda Drause</small>
+      <small > <a href="http://github.com/amandareyd/weather-app-project.git" target="_blank"
+        id="git-link">Open-sourced code</a>, by Amanda Drause</small>
    
   </div>
     <script src="index.js">
